# anylist_notify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.example.toml  docker-compose.yml
src/: config.rs  main.rs
src/cache/: mod.rs  models.rs  sqlite.rs
src/notify/: mod.rs  ntfy.rs
src/sync/: diff.rs  handler.rs  mod.rs
